# CourseWork02

./: CMakeLists.txt  CourseWork02.cpp
Racing/: Air_transport.cpp  Air_transport.h  All_Terrain_Boots.cpp  All_Terrain_Boots.h  Broom.cpp  Broom.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  ErrorEx.cpp  ErrorEx.h  Ground_Transport.cpp  Ground_Transport.h  Magic_Carpet.cpp  Magic_Carpet.h  Race.cpp  Race.h  Speed_Camel.cpp  Speed_Camel.h  Transport.cpp  Transport.h
